--- a/Amorem Artis/Amorem Artis/UserControlSeccion.xaml
+++ b/Amorem Artis/Amorem Artis/UserControlSeccion.xaml
@@ -18,19 +18,19 @@
         </Grid.RowDefinitions>
         <Grid Background="#1a237e" Grid.Row="0">
             <TextBlock Text="Secciones" FontSize="30" FontStyle="Italic" Foreground="White" HorizontalAlignment="Center"/>
-            <Button x:Name="Salir" Content="X" HorizontalAlignment="Right" Background="#1a237e" BorderBrush="#1a237e" Margin="0,0,10,0" Click="Salir_Click" />
+            <Button x:Name="Salir" Content="X" HorizontalAlignment="Right" Background="#F12C20" BorderBrush="#F12C20" Margin="0,0,10,0" Click="Salir_Click" />
         </Grid>
         <StackPanel Orientation="Vertical" Grid.Row="2">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button x:Name="btnNuevaSeccion" Content="Nueva Seccion"  Visibility="Visible" Click="BtnNuevaSeccion_Click"/>
-                <Button x:Name="btnModificarSeccion" Content="Modificar Seccion"  Margin="10,0,0,0"  Visibility="Visible" Click="BtnModificarSeccion_Click"/>
-                <Button x:Name="btnElimarSeccion" Content="Eliminar Seccion"  Margin="10,0,0,0"  Visibility="Visible" Click="BtnElimarSeccion_Click"/>
+                <Button x:Name="btnNuevaSeccion" Content="Nueva Sección"  Visibility="Visible" Click="BtnNuevaSeccion_Click"/>
+                <Button x:Name="btnModificarSeccion" Content="Modificar Sección"  Margin="10,0,0,0"  Visibility="Visible" Click="BtnModificarSeccion_Click"/>
+                <Button x:Name="btnElimarSeccion" Content="Eliminar Sección"  Margin="10,0,0,0"  Visibility="Visible" Click="BtnElimarSeccion_Click"/>
                 <StackPanel x:Name="stkSeccion" Orientation="Horizontal"  HorizontalAlignment="Center" Margin="20,0,0,0" Visibility="Collapsed">
-                    <TextBlock Text="Seccion" FontSize="20"/>
-                    <TextBox x:Name="txtSeccion" Width="200" FontSize="20" Visibility="Collapsed" />
-                    <ComboBox x:Name="cbSeccion" Width="200" FontSize="20" Visibility="Collapsed"/>
+                    <TextBlock Text="Sección" FontSize="20"/>
+                    <TextBox x:Name="txtSeccion" Width="200" FontSize="20" Visibility="Collapsed" Margin="15,0,0,0"/>
+                    <ComboBox x:Name="cbSeccion" Width="200" FontSize="20" Visibility="Collapsed" Margin="15,0,0,0"/>
                     <TextBlock x:Name="blNombreSeccion" Text="Nombre" FontSize="20" Margin="30,0,0,0"/>
-                    <TextBox x:Name="txtNombreSeccion" Width="200" FontSize="20" />
+                    <TextBox x:Name="txtNombreSeccion" Width="200" FontSize="20" Margin="15,0,0,0"/>
                 </StackPanel>
             </StackPanel>
         </StackPanel>
