--- a/Amorem Artis/Amorem Artis/UserControlPadres.xaml
+++ b/Amorem Artis/Amorem Artis/UserControlPadres.xaml
@@ -25,7 +25,7 @@
                 <Button x:Name="btnModificarPadre" Content="Modificar Padre"  Margin="10,0,0,0"  Visibility="Visible" Click="BtnModificarPadre_Click"/>
                 <Button x:Name="btnElimarPadre" Content="Eliminar Padre"  Margin="10,0,0,0"  Visibility="Visible" Click="BtnElimarPadre_Click"/>
                 <TextBlock x:Name="txtPadre" Text="Padre" FontSize="20" Visibility="Collapsed" Margin="20,0,0,0"/>
-                <ComboBox x:Name="ComboPadre" Width="150" Visibility="Collapsed" />
+                <ComboBox x:Name="ComboPadre" Width="150" Visibility="Collapsed" Margin="15,0,0,0"/>
             </StackPanel>
         </StackPanel>
         <Grid Grid.Row="3" x:Name="GridDatosPadre" Visibility="Collapsed">
@@ -51,7 +51,7 @@
                     <TextBox x:Name="txtEdad"  Width="200" FontSize="20" Margin="17,0,0,0"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" >
-                    <TextBlock Text="Telefono " FontSize="20" VerticalAlignment="Center"/>
+                    <TextBlock Text="Teléfono " FontSize="20" VerticalAlignment="Center"/>
                     <TextBox x:Name="txtTelefono"  Width="200" FontSize="20" Margin="18,0,0,0"/>
                 </StackPanel>
             </StackPanel>
