--- a/Amorem Artis/Amorem Artis/UserControlPagosAlumno.xaml
+++ b/Amorem Artis/Amorem Artis/UserControlPagosAlumno.xaml
@@ -18,42 +18,49 @@
         </Grid.RowDefinitions>
         <Grid Background="#1a237e" Grid.Row="0">
             <TextBlock Text="Pagos" FontSize="30" FontStyle="Italic" Foreground="White" HorizontalAlignment="Center"/>
-            <Button x:Name="Salir" Content="X" HorizontalAlignment="Right" Background="#1a237e" BorderBrush="#1a237e" Margin="0,0,10,0" Click="Salir_Click" />
+            <Button x:Name="Salir" Content="X" HorizontalAlignment="Right" Background="#F12C20" BorderBrush="#F12C20" Margin="0,0,10,0" Click="Salir_Click" />
         </Grid>
         <StackPanel Orientation="Vertical" Grid.Row="2">
             <StackPanel x:Name="stkBusqueda" Orientation="Horizontal" HorizontalAlignment="Center">
                 <TextBlock Text="Fechas" FontSize="20" Margin="0,0,30,0"/>
                 <TextBlock Text="Desde" FontSize="20"/>
-                <DatePicker x:Name="FechaDesde"  Width="100" Margin="0,0,30,0"/>
+                <DatePicker x:Name="FechaDesde"  Width="100" Margin="15,0,30,0"/>
                 <TextBlock Text="Hasta" FontSize="20"/>
-                <DatePicker x:Name="FechaHasta"  Width="100"/>
+                <DatePicker x:Name="FechaHasta"  Width="100" Margin="15,0,30,0"/>
                 <Button x:Name="btnBuscar" Content="Buscar" Margin="10,0,0,0"/>
                 <Button  x:Name="btnAgregar" Content="Agregar Pago" Margin="10,0,0,0" Click="BtnAgregar_Click"/>
             </StackPanel>
         </StackPanel>
         <DataGrid x:Name="DataGridPagos" Grid.Row="3" Margin="20,0,20,0" Visibility="Visible"/>
-        <StackPanel x:Name="stkAgregar"  Grid.Row="3" Margin="20,0,20,0" Orientation="Vertical" Visibility="Collapsed" HorizontalAlignment="Center" >
-            <StackPanel Orientation="Horizontal" Margin="0,0,0,30">
-                <TextBlock Text="Alumno" FontSize="20"/>
-                <ComboBox x:Name="CmbAlumno"  Width="150" Margin="0,0,30,0"/>
+        <Grid Grid.Row="3" Name="GridPagosAlumno" Visibility="Collapsed">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <StackPanel x:Name="stkAgregar"  Grid.Row="3" Margin="0,0,0,0" Orientation="Vertical" Visibility="Visible" HorizontalAlignment="Center" >
+                <StackPanel Orientation="Horizontal" Margin="0,0,0,30">
+                    <TextBlock Text="Alumno" FontSize="20"/>
+                    <ComboBox x:Name="CmbAlumno"  Width="150" Margin="20,0,30,0"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="0,0,0,30">
+                    <TextBlock Text="Pago     " FontSize="20" />
+                    <TextBox x:Name="txtPago"  Width="150" Margin="16,0,30,0"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="0,0,0,30">
+                    <TextBlock Text="Motivo " FontSize="20"/>
+                    <TextBox x:Name="txtMotivo"  Width="150" Margin="20,0,30,0"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="0,0,0,30">
+                    <TextBlock Text="Fecha    " FontSize="20"/>
+                    <DatePicker x:Name="dateFecha"  Width="150" Margin="15,0,30,0"/>
+                </StackPanel>
             </StackPanel>
-            <StackPanel Orientation="Horizontal" Margin="0,0,0,30">
-                <TextBlock Text="Pago     " FontSize="20" />
-                <TextBox x:Name="txtPago"  Width="150" Margin="0,0,30,0"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" Margin="0,0,0,30">
-                <TextBlock Text="Motivo " FontSize="20"/>
-                <TextBox x:Name="txtMotivo"  Width="150" Margin="0,0,30,0"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" Margin="0,0,0,30">
-                <TextBlock Text="Fecha    " FontSize="20"/>
-                <DatePicker x:Name="dateFecha"  Width="150" Margin="0,0,30,0"/>
-            </StackPanel>
-        </StackPanel>
-        <StackPanel x:Name="stkboton" Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="4" Visibility="Collapsed">
+            <DataGrid Name="dgPagosPendientesAlumno" Grid.Column="1" Margin="0,0,0,0"/>
+            <Label x:Name="lblPagosPendientesAlumno" Content="Pagos Pendientes" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="20" Margin="115,-40,120,0"/>
+        </Grid>
+        <StackPanel x:Name="stkboton" Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="5" Visibility="Collapsed">
             <Button x:Name="btnAceptar" Content="Agregar" Margin="10,0,0,0" />
             <Button x:Name="btnVolver" Content="Volver" Margin="10,0,0,0" Click="BtnVolver_Click"  />
         </StackPanel>
-        
     </Grid>
 </UserControl>
