--- a/Amorem Artis/Amorem Artis/UserControlUsuarios.xaml
+++ b/Amorem Artis/Amorem Artis/UserControlUsuarios.xaml
@@ -17,7 +17,7 @@
         </Grid.RowDefinitions>
         <Grid Background="#1a237e" Grid.Row="0">
             <TextBlock Text="Usuarios" FontSize="30" FontStyle="Italic" Foreground="White" HorizontalAlignment="Center"/>
-            <Button x:Name="Salir" Content="X" HorizontalAlignment="Right" Background="#1a237e" BorderBrush="#1a237e" Margin="0,0,10,0" Click="Salir_Click" />
+            <Button x:Name="Salir" Content="X" HorizontalAlignment="Right" Background="#F12C20" BorderBrush="#F12C20" Margin="0,0,10,0" Click="Salir_Click" />
         </Grid>
         
             <StackPanel Orientation="Horizontal" Grid.Row="2" HorizontalAlignment="Center">
@@ -28,7 +28,7 @@
                 </StackPanel>
             <StackPanel x:Name="stkusuario" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Collapsed">
                 <TextBlock Text="Usuario" FontSize="20"/>
-                <ComboBox x:Name="cmboUsuario" Width="150"/>
+                <TextBox x:Name="txbUsuario" Width="200" FontSize="20" Margin="15,0,0,0"/>
             </StackPanel>
         </StackPanel>
         <Grid x:Name="GridDetalle" Grid.Row="3" Visibility="Collapsed">
@@ -39,15 +39,15 @@
             <StackPanel x:Name="stkUsuario" Orientation="Vertical"  HorizontalAlignment="Center" Margin="20,0,0,0"  VerticalAlignment="Center">
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="Usuario      " FontSize="20" />
-                    <TextBox x:Name="txtUsuario" Width="200" FontSize="20" />
+                    <TextBox x:Name="txtUsuario" Width="200" FontSize="20" Margin="15,0,0,0"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="Contraseña" FontSize="20" />
-                    <TextBox x:Name="txtcontraseña" Width="200" FontSize="20" />
+                    <TextBox x:Name="txtcontraseña" Width="200" FontSize="20" Margin="15,0,0,0"/>
                 </StackPanel>
                 <StackPanel x:Name="stknueva" Orientation="Horizontal" Visibility="Collapsed">
                     <TextBlock Text="Contraseña Nueva" FontSize="20" />
-                    <TextBox x:Name="txtcontraseñaNueva" Width="150" FontSize="20" />
+                    <TextBox x:Name="txtcontraseñaNueva" Width="150" FontSize="20" Margin="15,0,0,0"/>
                 </StackPanel>
             </StackPanel>
             <DataGrid x:Name="datauser" Margin="10" Grid.Column="1"/>
