--- a/Amorem Artis/Amorem Artis/UserControlEstado.xaml
+++ b/Amorem Artis/Amorem Artis/UserControlEstado.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Amorem_Artis.UserControlSeccion"
+﻿<UserControl x:Class="Amorem_Artis.UserControlEstado"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -13,16 +13,16 @@
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="*"/>
-
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <Grid Background="#1a237e" Grid.Row="0">
-            <TextBlock Text="Secciones" FontSize="30" FontStyle="Italic" Foreground="White" HorizontalAlignment="Center"/>
+            <TextBlock Text="Estado" FontSize="30" FontStyle="Italic" Foreground="White" HorizontalAlignment="Center"/>
             <Button x:Name="Salir" Content="X" HorizontalAlignment="Right" Background="#F12C20" BorderBrush="#F12C20" Margin="0,0,10,0" Click="Salir_Click" />
         </Grid>
-        <Button x:Name="btnGuardar" Content="Guardar"  Click="BtnGuardar_Click" Grid.Row="2" Width="100"/>
+        <Button x:Name="Guardar" Content="Guardar"  Click="Guardar_Click" Grid.Row="2" Width="100" />
+        <DataGrid x:Name="gridEstado" Margin="50,0,50,0"  Visibility="Visible" VerticalAlignment="Stretch" Grid.Row="3" />
 
-        <DataGrid x:Name="gridSeccion"  Visibility="Visible" VerticalAlignment="Stretch" MinHeight="300" Grid.Row="3" Margin="50,0,50,0" />
-            
+
     </Grid>
 </UserControl>
+
