--- a/Amorem Artis/Amorem Artis/UserControlInstrumentos.xaml
+++ b/Amorem Artis/Amorem Artis/UserControlInstrumentos.xaml
@@ -20,24 +20,9 @@
             <TextBlock Text="Instrumentos" FontSize="30" FontStyle="Italic" Foreground="White" HorizontalAlignment="Center"/>
             <Button x:Name="Salir" Content="X" HorizontalAlignment="Right" Background="#F12C20" BorderBrush="#F12C20" Margin="0,0,10,0" Click="Salir_Click" />
         </Grid>
-        <StackPanel Orientation="Vertical" Grid.Row="2">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button x:Name="btnNuevoInstrumento" Content="Nuevo Instrumento"  Visibility="Visible" Click="BtnNuevoInstrumento_Click"/>
-                <Button x:Name="btnModificarInstrumento" Content="Modificar Instrumento"  Margin="10,0,0,0"  Visibility="Visible" Click="BtnModificarInstrumento_Click"/>
-                <Button x:Name="btnElimarInstrumento" Content="Eliminar Instrumento"  Margin="10,0,0,0"  Visibility="Visible" Click="BtnElimarInstrumento_Click"/>
-                <StackPanel x:Name="stkInstrumento" Orientation="Horizontal"  HorizontalAlignment="Center" Margin="20,0,0,0" Visibility="Collapsed">
-                    <TextBlock Text="Instrumento" FontSize="20" />
-                    <TextBox x:Name="txtInstrumento" Width="200" FontSize="20" Visibility="Collapsed" Margin="15,0,0,0"/>
-                </StackPanel>
-                <TextBlock x:Name="txtIns" Text="Instrumento" FontSize="20"  Margin="20,0,0,0" Visibility="Collapsed"/>
-            </StackPanel>
-        </StackPanel>
-        <DataGrid x:Name="gridInstrumentos" Margin="20,0,20,0"  Visibility="Visible" VerticalAlignment="Stretch" Grid.Row="3"/>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="4">
-            <Button x:Name="btnAgregar" Content="Agregar" Margin="10,0,0,0" Visibility="Collapsed"/>
-            <Button x:Name="btnModificar" Content="Modificar" Margin="10,0,0,0"  Visibility="Collapsed" />
-            <Button x:Name="btnEliminar" Content="Eliminar" Margin="10,0,0,0" Visibility="Collapsed"  />
-            <Button x:Name="btnVolver" Content="Volver" Margin="10,0,0,0" Visibility="Collapsed" Click="BtnVolver_Click" />
-        </StackPanel>
+        
+        <Button x:Name="Guardar" Content="Guardar"  Click="Guardar_Click" Grid.Row="2" Width="100" />
+        <DataGrid x:Name="gridInstrumentos" Margin="50,0,50,0" Visibility="Visible" VerticalAlignment="Stretch" Grid.Row="3"/>
+       
     </Grid>
 </UserControl>
