--- a/Amorem Artis/Amorem Artis/UserControlUsuarios.xaml
+++ b/Amorem Artis/Amorem Artis/UserControlUsuarios.xaml
@@ -28,7 +28,7 @@
                 </StackPanel>
             <StackPanel x:Name="stkusuario" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Collapsed">
                 <TextBlock Text="Usuario" FontSize="20"/>
-                <TextBox x:Name="txbUsuario" Width="200" FontSize="20" Margin="15,0,0,0"/>
+                <ComboBox x:Name="cbUsuario" Width="200" FontSize="20" Margin="15,0,0,0"/>
             </StackPanel>
         </StackPanel>
         <Grid x:Name="GridDetalle" Grid.Row="3" Visibility="Collapsed">
@@ -37,28 +37,40 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <StackPanel x:Name="stkUsuario" Orientation="Vertical"  HorizontalAlignment="Center" Margin="20,0,0,0"  VerticalAlignment="Center">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Usuario      " FontSize="20" />
-                    <TextBox x:Name="txtUsuario" Width="200" FontSize="20" Margin="15,0,0,0"/>
+                <StackPanel x:Name="stkUsuarioActual" Orientation="Horizontal" Visibility="Visible">
+                    <TextBlock Text="Usuario" FontSize="20" />
+                    <ComboBox x:Name="cbUsuarioActual" Width="200" FontSize="20" Margin="48,0,0,0"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Contraseña" FontSize="20" />
+                    <TextBlock Text="Usuario" FontSize="20" Visibility="Visible"/>
+                    <TextBox x:Name="txtUsuario" Width="200" FontSize="20" Margin="48,0,0,0"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Contraseña" FontSize="20" Visibility="Visible"/>
                     <TextBox x:Name="txtcontraseña" Width="200" FontSize="20" Margin="15,0,0,0"/>
                 </StackPanel>
                 <StackPanel x:Name="stknueva" Orientation="Horizontal" Visibility="Collapsed">
                     <TextBlock Text="Contraseña Nueva" FontSize="20" />
                     <TextBox x:Name="txtcontraseñaNueva" Width="150" FontSize="20" Margin="15,0,0,0"/>
                 </StackPanel>
+                <StackPanel x:Name="stkCargo" Orientation="Horizontal" Visibility="Collapsed">
+                    <TextBlock Text="Cargo" FontSize="20"/>
+                    <ComboBox x:Name="cbCargo" Width="200" FontSize="20" Margin="62,0,0,0"/>
+                </StackPanel>
+                <StackPanel x:Name="stkMaestro" Orientation="Horizontal" Visibility="Collapsed">
+                    <TextBlock Text="Maestro" FontSize="20"/>
+                    <ComboBox x:Name="cbMaestro" Width="200" FontSize="20" Margin="42,0,0,0"/>
+                </StackPanel>
             </StackPanel>
             <DataGrid x:Name="datauser" Margin="10" Grid.Column="1"/>
         </Grid>
 
-        <DataGrid x:Name="dataUsuarios" Grid.Row="3" Margin="20,0,20,0" Visibility="Visible"/>
+        <DataGrid x:Name="dataUsuarios" IsReadOnly="True" Grid.Row="3" Width="600" Margin="20,0,20,0" Visibility="Visible"/>
 
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="4">
-            <Button x:Name="btnAgregar" Content="Agregar" Margin="10,0,0,0" Visibility="Collapsed"/>
-            <Button x:Name="btnModificar" Content="Modificar" Margin="10,0,0,0"  Visibility="Collapsed" />
-            <Button x:Name="btnEliminar" Content="Eliminar" Margin="10,0,0,0" Visibility="Collapsed"  />
+            <Button x:Name="btnAgregar" Content="Agregar" Margin="10,0,0,0" Visibility="Collapsed" Click="BtnAgregar_Click"/>
+            <Button x:Name="btnModificar" Content="Modificar" Margin="10,0,0,0"  Visibility="Collapsed" Click="BtnModificar_Click"/>
+            <Button x:Name="btnEliminar" Content="Eliminar" Margin="10,0,0,0" Visibility="Collapsed"  Click="BtnEliminar_Click"/>
             <Button x:Name="btnVolver" Content="Volver" Margin="10,0,0,0" Visibility="Collapsed" Click="BtnVolver_Click" />
         </StackPanel>
     </Grid>
